--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Project: Etch-a-Sketch</title>
 </head>
 <body>
+    <button class="grid-size-button">Create new grid</button>
     <div class="container">
 
     </div>
