--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <title>Project: Etch-a-Sketch</title>
 </head>
 <body>
-    <button class="grid-size-button">Create new grid</button>
-    <div class="container">
+    <div class="header">🖼️ Etch a Sketch</div>
 
+    <div class="wrapper">
+        <button class="grid-size-button">Create new grid</button>
+        <div class="container"></div>
     </div>
+    
+    <div class="footer">The Odin Project © 2025</div>
 </body>
 </html>
