feat: add config buttons

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <div class="header">🖼️ Etch a Sketch</div>
 
     <div class="wrapper">
-        <button class="grid-size-button">Create new grid</button>
+        <div class="config-buttons">
+            <button class="clean-grid">Clear Grid</button>
+            <button class="grid-size">Change Grid Size</button>
+            <button class="random-colors">Random Colors Mode</button>
+            <button class="shading">Shading Mode</button>
+            <button class="default">Default Mode</button>
+        </div>
+        
         <div class="container"></div>
     </div>
-    
+
     <div class="footer">The Odin Project © 2025</div>
 </body>
 </html>
