feat: add clear grid function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="wrapper">
         <div class="config-buttons">
-            <button class="clean-grid">Clear Grid</button>
+            <button class="clear-grid">Clear Grid</button>
             <button class="grid-size">Change Grid Size</button>
             <button class="random-colors">Random Colors Mode</button>
             <button class="shading">Shading Mode</button>
