feat: add default and random colors functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="grid-size">Change Grid Size</button>
             <button class="random-colors">Random Colors Mode</button>
             <button class="shading">Shading Mode</button>
-            <button class="default">Default Mode</button>
+            <button class="default-color">Default Mode</button>
         </div>
         
         <div class="container"></div>
