refactor: improve color mode switching logic

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="config-buttons">
             <button class="clear-grid">Clear Grid</button>
             <button class="grid-size">Change Grid Size</button>
-            <button class="random-colors">Random Colors Mode</button>
-            <button class="shading">Shading Mode</button>
-            <button class="default-color">Default Mode</button>
+            <button class="random-colors-mode">Random Colors Mode</button>
+            <button class="shading-mode">Shading Mode</button>
+            <button class="default-color-mode">Default Mode</button>
         </div>
         
         <div class="container"></div>
