refactor: add ids to DOM elements for better targeting

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="header">🖼️ Etch a Sketch</div>
 
-    <div class="wrapper">
+    <div class="content-wrapper">
         <div class="config-buttons">
-            <button class="clear-grid">Clear Grid</button>
-            <button class="grid-size">Change Grid Size</button>
-            <button class="random-colors-mode">Random Colors Mode</button>
-            <button class="shading-mode">Shading Mode</button>
-            <button class="default-color-mode">Default Mode</button>
+            <button class="btn" id="clear-grid">Clear Grid</button>
+            <button class="btn" id="grid-size">Change Grid Size</button>
+            <button class="btn" id="random-colors-mode">Random Colors Mode</button>
+            <button class="btn" id="shading-mode">Shading Mode</button>
+            <button class="btn" id="default-color-mode">Default Mode</button>
         </div>
         
-        <div class="container"></div>
+        <div class="grid-container"></div>
     </div>
 
     <div class="footer">The Odin Project © 2025</div>
